--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <meta name="color-scheme" content="dark light" />
+    <link rel="icon" href="./images/favicon.ico" sizes="32x32" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="apple-touch-icon"
+      href="./images/mobile-icon.png"
+      sizes="180x180"
+    />
     <title>Сложно сосредоточиться</title>
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="header__decorated-inscription">
+        <span class="rec">Rec</span>
+      </div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -35,6 +52,71 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__title">no focus</h1>
+      <h2 class="header__subtitle title-decor">
+        Что делать, когда не можешь делать ничего<br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </h2>
     </header>
+    <main>
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2></h2>
+        <h3></h3>
+        <ul>
+          <li>
+            <h4></h4>
+            <p></p>
+          </li>
+          <li>
+            <h4></h4>
+            <p></p>
+          </li>
+          <li>
+            <h4></h4>
+            <p></p>
+          </li>
+          <li>
+            <h4></h4>
+            <p></p>
+          </li>
+          <li>
+            <h4></h4>
+            <p></p>
+          </li>
+        </ul>
+      </section>
+      <section></section>
+    </main>
+    <footer></footer>
   </body>
 </html>
