--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи <a>выяснили</a>, что мозгу
+              её просто не существует. Исследователи <a class="link-decorated">выяснили</a>, что мозгу
               тяжело концентрироваться даже на двух делах одновременно. А когда
               в поле внимания попадает несколько важных задач, организм паникует
               и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
@@ -173,7 +173,7 @@
             </h4>
             <p class="list-item__paragraph">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              <a>показал</a>, что созерцание природы повышает концентрацию, в то
+              <a class="link-decorated">показал</a>, что созерцание природы повышает концентрацию, в то
               время как после просмотра городских пейзажей она наоборот
               понижается. Можно совместить прогулку с физическими упражнениями
               или бегом — так в мозг поступит ещё больше кислорода и он будет
