--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи <a class="link-decorated">выяснили</a>, что мозгу
-              тяжело концентрироваться даже на двух делах одновременно. А когда
-              в поле внимания попадает несколько важных задач, организм паникует
-              и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
-              мы работаем невнимательно: ошибаемся и быстро устаём.
+              её просто не существует. Исследователи
+              <a class="link-decorated">выяснили</a>, что мозгу тяжело
+              концентрироваться даже на двух делах одновременно. А когда в поле
+              внимания попадает несколько важных задач, организм паникует и
+              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+              работаем невнимательно: ошибаемся и быстро устаём.
             </p>
           </li>
           <li class="section__list-item">
@@ -137,73 +138,76 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <ul class="section__list">
+        <div class="section__block">
           <h3 class="list-title title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <li class="section__list-item">
-            <h4 class="list-item__subtitle title-decor limited-decor">
-              Представьте небо и облака
-            </h4>
-            <p class="list-item__paragraph">
-              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
-              как раз и мешают эти сложные задачи делать. В такие моменты можно
-              закрыть глаза и представить, что чистое небо — это вы, а облака —
-              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-              где-то там, за тучами, и никуда не денется. Это упражнение поможет
-              вернуться в настоящий момент, а не волноваться о потенциальных
-              проблемах из будущего.
-            </p>
-          </li>
-          <li class="section__list-item">
-            <h4 class="list-item__subtitle title-decor limited-decor">
-              Включите музыку
-            </h4>
-            <p class="list-item__paragraph">
-              Но не любую, и не любимую. Любимая может быть связана с сильными
-              положительными эмоциями, которые тоже очень сильно отвлекают.
-              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-              попробовать включить плейлист с «белым шумом» или нейромузыкой.
-            </p>
-          </li>
-          <li class="section__list-item">
-            <h4 class="list-item__subtitle title-decor limited-decor">
-              Прогуляйтесь
-            </h4>
-            <p class="list-item__paragraph">
-              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              <a class="link-decorated">показал</a>, что созерцание природы повышает концентрацию, в то
-              время как после просмотра городских пейзажей она наоборот
-              понижается. Можно совместить прогулку с физическими упражнениями
-              или бегом — так в мозг поступит ещё больше кислорода и он будет
-              лучше работать. Но и простая двадцатиминутная прогулка — тоже
-              отличный вариант.
-            </p>
-          </li>
-          <li class="section__list-item">
-            <h4 class="list-item__subtitle title-decor limited-decor">
-              Хорошо ешьте
-            </h4>
-            <p class="list-item__paragraph">
-              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-              которые препятствуют резким скачкам сахара в крови. Например, с
-              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
-              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-            </p>
-          </li>
-          <li class="section__list-item">
-            <h4 class="list-item__subtitle title-decor limited-decor">
-              Читайте
-            </h4>
-            <p class="list-item__paragraph">
-              Настоящие бумажные книги. Это правда помогает с концентрацией:
-              чтобы прочитать пост в соцсети, достаточно нескольких минут или
-              даже секунд. А вот интересная книга способна затянуть и на
-              несколько часов и круто тренирует направленное внимание.
-            </p>
-          </li>
-        </ul>
+          <ul class="section__list">
+            <li class="section__list-item">
+              <h4 class="list-item__subtitle title-decor limited-decor">
+                Представьте небо и облака
+              </h4>
+              <p class="list-item__paragraph">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+            <li class="section__list-item">
+              <h4 class="list-item__subtitle title-decor limited-decor">
+                Включите музыку
+              </h4>
+              <p class="list-item__paragraph">
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист с «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="section__list-item">
+              <h4 class="list-item__subtitle title-decor limited-decor">
+                Прогуляйтесь
+              </h4>
+              <p class="list-item__paragraph">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a class="link-decorated">показал</a>, что созерцание природы
+                повышает концентрацию, в то время как после просмотра городских
+                пейзажей она наоборот понижается. Можно совместить прогулку с
+                физическими упражнениями или бегом — так в мозг поступит ещё
+                больше кислорода и он будет лучше работать. Но и простая
+                двадцатиминутная прогулка — тоже отличный вариант.
+              </p>
+            </li>
+            <li class="section__list-item">
+              <h4 class="list-item__subtitle title-decor limited-decor">
+                Хорошо ешьте
+              </h4>
+              <p class="list-item__paragraph">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
+              </p>
+            </li>
+            <li class="section__list-item">
+              <h4 class="list-item__subtitle title-decor limited-decor">
+                Читайте
+              </h4>
+              <p class="list-item__paragraph">
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="content__section-gallery">
         <h3 class="section-gallery__title title-decor">А можно в картинках?</h3>
