--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       </nav>
       <h1 class="header__title">no focus</h1>
       <div class="header__subtitle">
-        <h2 class="title-decor">
+        <p class="title-decor">
           Что делать, когда не можешь делать ничего<br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень
           надо
-        </h2>
+        </p>
       </div>
     </header>
     <main class="content">
@@ -72,11 +72,15 @@
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a class="link-decorated">выяснили</a>, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
+              <a
+                class="link-decorated"
+                href="https://dana.org/news-and-insights/"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
             </p>
           </li>
           <li class="section__list-item">
@@ -94,7 +98,7 @@
           </li>
         </ul>
       </section>
-      <section class="content__section">
+      <section class="content__section location-elements">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <ul class="section__list">
           <li class="section__list-item">
@@ -138,7 +142,7 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <div class="section__block">
+        <article class="section__block">
           <h3 class="list-title title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
@@ -175,12 +179,16 @@
               </h4>
               <p class="list-item__paragraph">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a class="link-decorated">показал</a>, что созерцание природы
-                повышает концентрацию, в то время как после просмотра городских
-                пейзажей она наоборот понижается. Можно совместить прогулку с
-                физическими упражнениями или бегом — так в мозг поступит ещё
-                больше кислорода и он будет лучше работать. Но и простая
-                двадцатиминутная прогулка — тоже отличный вариант.
+                <a
+                  class="link-decorated"
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  >показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант.
               </p>
             </li>
             <li class="section__list-item">
@@ -207,7 +215,7 @@
               </p>
             </li>
           </ul>
-        </div>
+        </article>
       </section>
       <section class="content__section-gallery">
         <h3 class="section-gallery__title title-decor">А можно в картинках?</h3>
